--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.8.10",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -39,6 +41,8 @@
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.0",
-    "ts-command-line-args": "^2.5.1"
+    "ts-command-line-args": "^2.5.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
   }
 }
