--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.3",
     "morgan": "^1.10.0",
+    "socket.io": "^4.7.2",
     "ts-command-line-args": "^2.5.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0"
